# keydump

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
implant/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
implant/scripts/: extract-shellcode.py
implant/src/: basic_z.c  basic_z.h  build.h.in  lib_d.c  lib_d.h  libc_d.c  libc_d.h  linker.h  linker.ld  log.c  log.h  main.c  print.h  start.asm  start.c  start.h  syscall_z.asm  syscall_z.c  syscall_z.h
src/: keyctl.rs  main.rs  readin.rs
src/tracer/: basics.rs  error.rs  mod.rs  ptrace.rs
src/tracer/x64/: basics.rs  mod.rs  ptrace.rs  register.rs  syscall.rs
