[package]
name = "keydump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
errno = "0.3.8"
libc = "0.2.153"
log = "0.4.21"
